# Search-engine

Crawler/: .gitignore
Indexer/: .gitignore  Cargo.toml
Indexer/src/: main.rs  urls.txt  utils.rs
